Migración de estilo a GRID

--- a/login1/index.html
+++ b/login1/index.html
@@ -12,11 +12,14 @@
     <div class="div-centrado">
         <h1 class="div-centrado__titulo">Agregar Perfil</h1>
         <h3 class="div-centrado__subtitulo">Crea un perfil con otra persona que use Netflix.</h3>
-        <img class="logo-usuario" src="https://occ-0-618-1740.1.nflxso.net/dnm/api/v6/K6hjPJd6cR6FpVELC5Pd6ovHRSk/AAAABTEYr5GclkFvWr7UwFeZpOL1oyV7oD98NciCdYxbhh88KEKn5uB_EcZ6Q_dIG9zNfu-4RvoOWfrLxyPODLCeMAdgsKe1W5JLoXos.png?r=a4b" alt="img-usuario" width="200px" height="200px">
+       
+        <div class="linea1"></div>
+        <img class="logo-usuario" src="https://occ-0-618-1740.1.nflxso.net/dnm/api/v6/K6hjPJd6cR6FpVELC5Pd6ovHRSk/AAAABTEYr5GclkFvWr7UwFeZpOL1oyV7oD98NciCdYxbhh88KEKn5uB_EcZ6Q_dIG9zNfu-4RvoOWfrLxyPODLCeMAdgsKe1W5JLoXos.png?r=a4b" alt="img-usuario" width="150px" height="150px">
+        <div class="linea2"></div>
         <input class="input-usuario" type="text" placeholder="Nombre de usuario">
         
         <!--Acá empieza el checkbox-->
-        <label class="label-infantil">Modo Infantil:</label>
+        <label class="label-infantil">¿Infantil?</label>
         <input class="checkbox-infantil" type="checkbox">
         <!--Acá termina-->
         <button class="continuar">Continuar</button>
