--- a/login1/index.html
+++ b/login1/index.html
@@ -14,13 +14,13 @@
         <h3 class="div-centrado__subtitulo">Crea un perfil con otra persona que use Netflix.</h3>
        
         <div class="linea1"></div>
-        <img class="logo-usuario" src="https://occ-0-618-1740.1.nflxso.net/dnm/api/v6/K6hjPJd6cR6FpVELC5Pd6ovHRSk/AAAABTEYr5GclkFvWr7UwFeZpOL1oyV7oD98NciCdYxbhh88KEKn5uB_EcZ6Q_dIG9zNfu-4RvoOWfrLxyPODLCeMAdgsKe1W5JLoXos.png?r=a4b" alt="img-usuario" width="150px" height="150px">
+        <img class="logo-usuario" src="https://occ-0-618-1740.1.nflxso.net/dnm/api/v6/K6hjPJd6cR6FpVELC5Pd6ovHRSk/AAAABTEYr5GclkFvWr7UwFeZpOL1oyV7oD98NciCdYxbhh88KEKn5uB_EcZ6Q_dIG9zNfu-4RvoOWfrLxyPODLCeMAdgsKe1W5JLoXos.png?r=a4b" alt="img-usuario" width="170px" height="170px">
         <div class="linea2"></div>
         <input class="input-usuario" type="text" placeholder="Nombre de usuario">
         
         <!--Acá empieza el checkbox-->
-        <label class="label-infantil">¿Infantil?</label>
-        <input class="checkbox-infantil" type="checkbox">
+        <label class="label-checkbox" for="checkbox">¿Infantil?</label>
+        <input class="checkbox" id="checkbox" type="checkbox">
         <!--Acá termina-->
         <button class="continuar">Continuar</button>
         <button class="cancelar">Cancelar</button>
