--- a/login1/index.html
+++ b/login1/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" text="text/css" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Netflix | Login1</title>
 </head>
 <body>
