--- a/netflix-login.html
+++ b/netflix-login.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/icos" href="favicon.ico">
-    <title>Netflix | Login</title>
+    <title>Document</title>
 </head>
 <body>
     
