--- a/netflix-login.html
+++ b/netflix-login.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" text="text/css" href="netflix-login.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="login-container">
+        <div class="login">
+            <h1 class="inicia-sesion">Inicia sesión</h1>
+            <div class="login-form">
+                <input class="input-usuario" placeholder="Nombre de usuario o Email" type="text">
+                <input class="input-password" placeholder="Contraseña" type="password">
+                <button class="submit" type="submit">Inicia sesión</button>
+            </div>
+            <div class="help-container">
+                <label class="recuerdame" for="mi-checkbox">Recuerdame</label>
+                <input id="mi-checkbox" class="recuerdame-checkbox" type="checkbox">
+                <a href="" class="ayuda">¿Necesitas ayuda?</a>
+            </div>
+                <span class="suscribete">¿Primera vez en Netflix? <a href="">Suscríbete ahora</a></span>
+                <p class="aviso">Esta página esta protegida por Google reCAPTCHA</p>
+        </div>
+    </div>
 </body>
 </html>
