--- a/profiles/profiles.html
+++ b/profiles/profiles.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles-profiles.css">
   <link rel="shortcut icon" href="./assets/favicon.png">
   <title>Profile Netflix Clone</title>
 </head>
