--- a/home/home.html
+++ b/home/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clon de Netfilx</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
     <main>
@@ -41,7 +41,7 @@
             </section>
 
             <section>
-                <span>Continue Watching for Robert</span>
+                <span id="nombreUsuario">Continue Watching for </span>
                 <div class="s-2">
                     <img src="./img/life-of-brian.jfif" alt="Serie de brian">
                     <img src="./img/disenchantmenr.jpg" alt="Serie disenchantment">
@@ -63,5 +63,6 @@
                </section>
         </div>
     </main>
+    <script src="home.js"></script>
 </body>
 </html>
