Union del home con los perfiles

--- a/home/home.html
+++ b/home/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clon de Netfilx</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="shortcut icon" href="../profiles/assets/favicon.png">
 </head>
 <body>
     <main>
@@ -24,7 +25,9 @@
             <div class="ajustes">
                 <img src="./img/buscador.png" alt="Icono de buscador">
                 <img src="./img/campana.png" alt="Icono de notificaciones">
-                <img src="./img/perfil.jpg" alt="Icono de perfil">
+                <a href="../profiles/profiles.html">
+                    <img src="./img/perfil.jpg" alt="Icono de perfil">
+                </a>
             </div>
         </nav>
 
