--- a/new-profile/new-profile.html
+++ b/new-profile/new-profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" text="text/css" href="styles.css">
+    <link rel="stylesheet" text="text/css" href="new-profile.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
