Interactividad con el nombreUsuario en profiles

--- a/new-profile/new-profile.html
+++ b/new-profile/new-profile.html
@@ -17,14 +17,16 @@
         <div class="linea1"></div>
         <img class="logo-usuario" src="https://occ-0-618-1740.1.nflxso.net/dnm/api/v6/K6hjPJd6cR6FpVELC5Pd6ovHRSk/AAAABTEYr5GclkFvWr7UwFeZpOL1oyV7oD98NciCdYxbhh88KEKn5uB_EcZ6Q_dIG9zNfu-4RvoOWfrLxyPODLCeMAdgsKe1W5JLoXos.png?r=a4b" alt="img-usuario" width="170px" height="170px">
         <div class="linea2"></div>
-        <input class="input-usuario" type="text" placeholder="Nombre de usuario">
+        <input class="input-usuario" id="input-usuario-profile" type="text" placeholder="Nombre de usuario">
         
         <!--Acá empieza el checkbox-->
         <label class="label-checkbox" for="checkbox">¿Infantil?</label>
         <input class="checkbox" id="checkbox" type="checkbox">
         <!--Acá termina-->
-        <button class="continuar">Continuar</button>
-        <button class="cancelar">Cancelar</button>
+
+        <button class="continuar" id="continuar">Continuar</button>
+        <a href="../home/home.html"><button class="cancelar" id="cancelar">Cancelar</button></a>
     </div>
+    <script src="new-profile.js"></script>
 </body>
 </html>
