--- a/profiles/profiles.html
+++ b/profiles/profiles.html
@@ -33,7 +33,7 @@
               <span>Niños</span>
             </a>
           </div>
-          <a href="#profiles" class="add-profile">
+          <a href="../new-profile/new-profile.html" class="add-profile">
             <div class="wrapper-add-profile">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000" fill="#141414">
                 <path d="M360.1,989.7V10.3h279.8v979.3H360.1L360.1,989.7z M10,640V359.7h980V640H10L10,640z"></path>
